// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page banner renders child page banner correctly 1`] = `
<div
  class="page-banner"
>
  <div
    class="site-nav-container"
  >
    <a
      class="site-title"
      href="/"
    >
      Otto Lindblom
    </a>
    <nav
      class="site-nav"
    >
      <input
        class="nav-trigger"
        id="nav-trigger"
        type="checkbox"
      />
      <label
        for="nav-trigger"
      >
        <span
          class="nav-menu-icon"
        >
          <svg
            fill="#424242"
            height="30px"
            viewBox="0 0 20 20"
            width="30px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </label>
      <div
        class="trigger"
      >
        <a
          class="custom-nav-link"
          href="/#about"
        >
          About
        </a>
        <a
          class="custom-nav-link"
          href="/#projects"
        >
          Projects
        </a>
        <a
          class="custom-nav-link"
          href="/brief-cv"
        >
          Brief CV
        </a>
        <a
          class="custom-nav-link"
          href="/#contact"
        >
          Contact
        </a>
      </div>
    </nav>
  </div>
</div>
`;

exports[`Page banner renders root page banner correctly 1`] = `
<div
  class="page-banner"
>
  <div
    class="site-nav-container"
  >
    <nav
      class="site-nav"
    >
      <input
        class="nav-trigger"
        id="nav-trigger"
        type="checkbox"
      />
      <label
        for="nav-trigger"
      >
        <span
          class="nav-menu-icon"
        >
          <svg
            fill="#424242"
            height="30px"
            viewBox="0 0 20 20"
            width="30px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </label>
      <div
        class="trigger"
      >
        <a
          class="custom-nav-link"
          href="/#about"
        >
          About
        </a>
        <a
          class="custom-nav-link"
          href="/#projects"
        >
          Projects
        </a>
        <a
          class="custom-nav-link"
          href="/brief-cv"
        >
          Brief CV
        </a>
        <a
          class="custom-nav-link"
          href="/#contact"
        >
          Contact
        </a>
      </div>
    </nav>
  </div>
</div>
`;
